--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/src/assets/logo.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="Blocverse"
-      content="Blockchain Multiverse"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/src/assets/Blocmeta.png" />
+    <title>BlocMetverse</title>
+     <meta charset="utf-8">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://blocverse.com/">
+    <meta property="og:title" content="The Blockchain Metaverse">
+    <meta property="og:description"
+        content="Cartic Finance is regarded as a suite of DeFi products on the Blockchain.">
+    <meta property="og:image"
+        content="./Blocmeta.PNG">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://blocverse.com/">
+    <meta property="twitter:title" content="Blockchain Metaverse"
+        content=
+        "">
+    <meta property="twitter:image"
+        content="./Blocmeta.PNG">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="resources/images/logo.svg" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
